se agrego section avatar y gradiente de color en el section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       </div>
     </nav>
   </header>
+  <section class="fondo text-center text-light py-4">
+<div class="container">
+  <img src="img/IMG_20200214_010934.jpg" alt="avatar-fabrizio" class="avatar my-3">
+  <h3>Fabrizio Oller</h3>
+  <p>Software Developer</p>
+</div>
+  </section>
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
       <i class="fab fa-linkedin fa-2x mr-2"></i>
@@ -54,7 +61,6 @@
       <p class="lead mt-3">Fabrizio Oller</p>
       <p>&copy todos los derechos reservados. 2020 Año de la pandemia.</p>
     </div>
-
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
