se agrego informacion basica de mi cv

--- a/index.html
+++ b/index.html
@@ -48,11 +48,32 @@
     </nav>
   </header>
   <section class="fondo text-center text-light py-4">
-<div class="container">
-  <img src="img/IMG_20200214_010934.jpg" alt="avatar-fabrizio" class="avatar my-3">
-  <h3>Fabrizio Oller</h3>
-  <p>Software Developer</p>
-</div>
+    <div class="container">
+      <img src="img/IMG_20200214_010934.jpg" alt="avatar-fabrizio" class="avatar my-3">
+      <h3>Fabrizio Oller</h3>
+      <p>Software Developer</p>
+    </div>
+  </section>
+  <section class="container">
+    <h2 class="display-4 text-center my-4" id="informacionBasica">Información Basica</h2>
+    <hr>
+    <article class="shadow p-3 mb-5 bg-white rounded">
+      <h3>Datos Personales</h3>
+      <hr>
+      <p> <strong>Edad:</strong> 32 años</p>
+      <p> <strong>E-mail:</strong> fabrioller@gmail.com</p>
+      <p> <strong> Telefono:</strong> +54 3815444492</p>
+      <p> <strong>Direcion: </strong> calle Wallaby, 42, Sydney</p>
+      <hr>
+      <h3>Sobre Mi</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum assumenda tempore neque, esse
+        provident soluta architecto at? Voluptas, ut ipsa doloribus nemo neque iusto, rerum accusamus deleniti maxime
+        culpa, labore maiores ea perspiciatis quibusdam odit minus debitis sunt quos totam iste! In repellat hic autem,
+        provident quo molestias, voluptatem, quia libero excepturi temporibus non sequi illo nihil? Reprehenderit vero
+        accusantium fuga! Cum at eum saepe esse, a laudantium tempore fuga libero. Reiciendis blanditiis aliquam, sequi
+        assumenda corrupti asperiores aspernatur explicabo magni dolorum illum nulla eligendi repellat quas deleniti
+        ipsam a illo hic sapiente? Officiis voluptate sed voluptas consequatur ullam.</p>
+    </article>
   </section>
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
