se agregaron cards con experiencia laborales

--- a/index.html
+++ b/index.html
@@ -74,6 +74,67 @@
         assumenda corrupti asperiores aspernatur explicabo magni dolorum illum nulla eligendi repellat quas deleniti
         ipsam a illo hic sapiente? Officiis voluptate sed voluptas consequatur ullam.</p>
     </article>
+    <h2 class="display-4 text-center my-4">Experiencia Laboral</h2>
+    <hr>
+    <article>
+      <div class="card mb-5 shadow  bg-white rounded">
+        <div class="row no-gutters">
+          <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
+            <p class="lead">Fecha desde - fecha hasta</p>
+            <p class="lead">Lugar de Trabajo</p>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Puesto de Trabajo</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
+                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
+                  class="badge badge-warning">Git </span> </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-5 shadow  bg-white rounded">
+        <div class="row no-gutters">
+          <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
+            <p class="lead">Fecha desde - fecha hasta</p>
+            <p class="lead">Lugar de Trabajo</p>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Puesto de Trabajo</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
+                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
+                  class="badge badge-warning">Git </span> </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-5 shadow  bg-white rounded">
+        <div class="row no-gutters">
+          <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
+            <p class="lead">Fecha desde - fecha hasta</p>
+            <p class="lead">Lugar de Trabajo</p>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Puesto de Trabajo</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
+                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
+                  class="badge badge-warning">Git </span> </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
   </section>
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
