--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Sobre Mi <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#informacionBasica">Sobre Mi <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Experiencia laboral</a>
+              <a class="nav-link" href="#experienciaLaboral">Experiencia laboral</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Educacion</a>
@@ -74,7 +74,7 @@
         assumenda corrupti asperiores aspernatur explicabo magni dolorum illum nulla eligendi repellat quas deleniti
         ipsam a illo hic sapiente? Officiis voluptate sed voluptas consequatur ullam.</p>
     </article>
-    <h2 class="display-4 text-center my-4">Experiencia Laboral</h2>
+    <h2 class="display-4 text-center my-4" id="experienciaLaboral">Experiencia Laboral</h2>
     <hr>
     <article>
       <div class="card mb-5 shadow  bg-white rounded">
