se agrego section y article de educacion y tres cards

--- a/index.html
+++ b/index.html
@@ -136,12 +136,41 @@
       </div>
     </article>
   </section>
+  <h2 class="display-4 text-center my-4" id="educacion">Educación</h2>
+  <section class="container text-center">
+  <article class="shadow p-3 mb-5 bg-white rounded row">
+    <div class="card mx-4" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card mx-4" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    <div class="card mx-4" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </article>
+</section>
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
       <i class="fab fa-linkedin fa-2x mr-2"></i>
       <i class="fab fa-github fa-2x"></i>
       <p class="lead mt-3">Fabrizio Oller</p>
-      <p>&copy todos los derechos reservados. 2020 Año de la pandemia.</p>
+      <p>&copy Todos los derechos reservados. 2020 Año de la pandemia.</p>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
