--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li>
               <a class="nav-link" href="#informacionBasica">Sobre Mi <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#experienciaLaboral">Experiencia laboral</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Educacion</a>
+              <a class="nav-link" href="#educacion">Educacion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Habilidades</a>
@@ -137,34 +137,87 @@
     </article>
   </section>
   <h2 class="display-4 text-center my-4" id="educacion">Educación</h2>
-  <section class="container text-center">
-  <article class="shadow p-3 mb-5 bg-white rounded row">
-    <div class="card mx-4" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+  <section class="container">
+    <article class="shadow p-3 mb-5 bg-white rounded row justify-content-center">
+      <div class="card mx-4" style="width: 300px;">
+        <div class="bg-secondary text-light text-center pt-2">
+          <p class="lead">Fecha desde - fecha hasta</p>
+          <p class="lead">Institución</p>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+
+        </div>
       </div>
-    </div>
-    <div class="card mx-4" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card mx-4" style="width: 300px;">
+        <div class="bg-secondary text-light text-center pt-2">
+          <p class="lead">Fecha desde - fecha hasta</p>
+          <p class="lead">Institución</p>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+
+        </div>
       </div>
-    </div>
-    <div class="card mx-4" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card mx-4" style="width: 300px;">
+        <div class="bg-secondary text-light text-center pt-2">
+          <p class="lead">Fecha desde - fecha hasta</p>
+          <p class="lead">Institución</p>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+
+        </div>
       </div>
+    </article>
+  </section>
+  <section class="container">
+    <h2 class="display-4 text-center my-4">Portfolio</h2>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/img-cv/panaderia-cocu.jpg" class="d-block w-100" alt="practica-panaderia">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-warning">Página web de Panaderia</h5>
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/img-cv/Sin título.jpg" class="d-block w-100" alt="practica-html">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-danger">Primer página web</h5>
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/img-cv/elementos-bootstrap.jpg" class="d-block w-100" alt="practica-bootstrap">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-primary">Página sobre Bootstrap</h5>
+
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-  </article>
-</section>
+  </section>
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
       <i class="fab fa-linkedin fa-2x mr-2"></i>
