se soluciono problema de scroll con my-2 a las cards de educacion y dandole cols 40 al text area del formulario

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2 class="display-4 text-center my-4" id="experienciaLaboral">Experiencia Laboral</h2>
     <hr>
     <article>
-      <div class="card mb-5 shadow  bg-white rounded">
+      <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
             <p class="lead">Fecha desde - fecha hasta</p>
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="card mb-5 shadow  bg-white rounded">
+      <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
             <p class="lead">Fecha desde - fecha hasta</p>
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-      <div class="card mb-5 shadow  bg-white rounded">
+      <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
             <p class="lead">Fecha desde - fecha hasta</p>
@@ -139,7 +139,7 @@
   <h2 class="display-4 text-center my-4" id="educacion">Educación</h2>
   <section class="container">
     <article class="shadow p-3 mb-5 bg-white rounded row justify-content-center">
-      <div class="card mx-4" style="width: 300px;">
+      <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
           <p class="lead">Fecha desde - fecha hasta</p>
           <p class="lead">Institución</p>
@@ -151,7 +151,7 @@
 
         </div>
       </div>
-      <div class="card mx-4" style="width: 300px;">
+      <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
           <p class="lead">Fecha desde - fecha hasta</p>
           <p class="lead">Institución</p>
@@ -163,7 +163,7 @@
 
         </div>
       </div>
-      <div class="card mx-4" style="width: 300px;">
+      <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
           <p class="lead">Fecha desde - fecha hasta</p>
           <p class="lead">Institución</p>
@@ -218,14 +218,14 @@
   </section>
   <h2 class="display-4 my-4 text-center" id="contacto">Contacto</h2>
   <article class="m-4">
-    <div>
+    <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-12 col-md-6">
           <iframe class="w-100"
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d250.82355110864387!2d150.6037386876279!3d-33.75599263534946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90d3f3aab8d53629!2sP%20Sherman!5e1!3m2!1ses-419!2sar!4v1589152847959!5m2!1ses-419!2sar"
             height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-12 col-md-6">
           <form>
             <div class="form-group">
               <label> Nombre y Apellido</label>
@@ -241,7 +241,7 @@
             </div>
             <div class="form-group">
               <label> Consulta</label>
-              <textarea name="" id="" cols="70" rows="4" placeholder="Ingrese su Consulta"></textarea class="form-control">
+              <textarea name="" id="" cols="40" rows="4" placeholder="Ingrese su Consulta"></textarea class="form-control">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
