se completo la informacion de trabajos y estudios cursadon en las cards

--- a/index.html
+++ b/index.html
@@ -80,17 +80,18 @@
       <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
-            <p class="lead">Fecha desde - fecha hasta</p>
-            <p class="lead">Lugar de Trabajo</p>
+            <p class="lead">Abril 2009 - Septiembre 2009</p>
+            <p class="lead">Laboratorio Climatologico Sudamericano</p>
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Puesto de Trabajo</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
-                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
-                  class="badge badge-warning">Git </span> </p>
+              <h5 class="card-title">Meteorologo</h5>
+              <p class="card-text">Durante este periodo, realicé pronosticos del tiempo a corto plazo, que salian
+                publicados en el periodico La Gaceta, tambien recopilacion de datos climaticos y observaciones
+                meteorologicas.</p>
+              <p>Habilidades: <span class="badge badge-warning"> Climatologia</span> <span
+                  class="badge badge-warning">Img satelitales</span> <span class="badge badge-warning">Modelos
+                  Numericos</span> <span class="badge badge-warning">vigilancia climatica</span> </p>
 
             </div>
           </div>
@@ -99,17 +100,19 @@
       <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
-            <p class="lead">Fecha desde - fecha hasta</p>
-            <p class="lead">Lugar de Trabajo</p>
+            <p class="lead">Diciembre 2015 - septiembre 2017</p>
+            <p class="lead">CEN-2016</p>
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Puesto de Trabajo</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
-                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
-                  class="badge badge-warning">Git </span> </p>
+              <h5 class="card-title">Encargado de voluntarios jovenes</h5>
+              <p class="card-text">Durante la organización del decimo congreso eucaristico nacional, fui responsable de
+                asignar tareas a mas de 500 jovenes que fueron voluntarios en el congreso. Tambien controlar que esas
+                tareas sean llevadas a cabo y resolver multiples problemas. </p>
+              <p>Habilidades: <span class="badge badge-warning">Liderazgo</span> <span
+                  class="badge badge-warning">resolución de problemas</span> <span
+                  class="badge badge-warning">Creatividad</span> <span class="badge badge-warning">Comunicación</span>
+              </p>
 
             </div>
           </div>
@@ -118,17 +121,18 @@
       <div class="card mb-4 shadow  bg-white rounded">
         <div class="row no-gutters">
           <div class="col-md-4 bg-secondary text-light text-center d-flex flex-column justify-content-center">
-            <p class="lead">Fecha desde - fecha hasta</p>
-            <p class="lead">Lugar de Trabajo</p>
+            <p class="lead">Agosto 2015 - Mayo 2018</p>
+            <p class="lead">Cruz Roja Argentina</p>
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Puesto de Trabajo</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p>Habilidades: <span class="badge badge-warning"> Html5</span> <span
-                  class="badge badge-warning">Css3</span> <span class="badge badge-warning">Bootstrap</span> <span
-                  class="badge badge-warning">Git </span> </p>
+              <h5 class="card-title">Jefe de Socorristas</h5>
+              <p class="card-text">En este puesto me encargue de tareas de planificación y ejecucion de operativos en
+                donde brigadas delta debian acudir a prestar socorro en eventos masivos, inundaciones y otros escenarios
+                peligrosos.</p>
+              <p>Habilidades: <span class="badge badge-warning">Liderazgo</span> <span
+                  class="badge badge-warning">Planificaión</span> <span class="badge badge-warning">Estrategias</span> <span
+                  class="badge badge-warning">Comunicaión</span> </p>
 
             </div>
           </div>
@@ -139,39 +143,37 @@
   <h2 class="display-4 text-center my-4" id="educacion">Educación</h2>
   <section class="container">
     <article class="shadow p-3 mb-5 bg-white rounded row justify-content-center">
+      
       <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
-          <p class="lead">Fecha desde - fecha hasta</p>
-          <p class="lead">Institución</p>
+          <p class="lead">Marzo 1994 - Diciembre 1999</p>
+          <p class="lead">Esc Republica del Paraguay</p>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <h5 class="card-title">Nivel Primario</h5>
+          <p class="card-text">Estudios completos</p>
 
         </div>
       </div>
       <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
-          <p class="lead">Fecha desde - fecha hasta</p>
-          <p class="lead">Institución</p>
+          <p class="lead">Marzo 2000 - Diciembre 2005</p>
+          <p class="lead">Instituto Nta Sra de Lujan</p>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <h5 class="card-title">Nivel secundario</h5>
+          <p class="card-text">Estudios completos</p>
 
         </div>
       </div>
       <div class="card mx-4 my-2" style="width: 300px;">
         <div class="bg-secondary text-light text-center pt-2">
-          <p class="lead">Fecha desde - fecha hasta</p>
-          <p class="lead">Institución</p>
+          <p class="lead">Marzo 2020 - Actualmente</p>
+          <p class="lead">Rolling Code School</p>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <h5 class="card-title">Developer full stack</h5>
+          <p class="card-text">Estudios en curso</p>
 
         </div>
       </div>
